<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
    	android:title="@string/pref_ar_altitude_title">
    	<Preference
    		android:key="altitudeIntent"
    		android:title="@string/pref_user_altitude_title" 
    		android:summary="@string/pref_user_altitude_summary"/>
    	<ListPreference
    		android:key="height"
    		android:title="@string/pref_ar_altitude_status_title" 
    		android:summary="@string/pref_ar_altitude_status_summary"
    		android:dialogTitle="@string/pref_ar_altitude_status_title"
    		android:entries="@array/height_options"
    		android:entryValues="@array/values_height_options"
    		android:defaultValue="Existing_heights"/>
    	<CheckBoxPreference
    		android:key="useDistFilter"
    		android:title="@string/pref_ar_altitude_useDistFilter_title"
    		android:summaryOn="@string/pref_ar_altitude_useDistFilter_summary_on" 
    		android:summaryOff="@string/pref_ar_altitude_useDistFilter_summary_off" 
    		android:defaultValue="false"/>
    	<Preference
    		android:key="distFilter"
    		android:title="@string/pref_ar_altitude_distFilter_title" 
    		android:dependency="useDistFilter"
    		android:defaultValue="0"/>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/pref_ar_location_title">
    	<Preference
    		android:key="locationIntent"
    		android:title="@string/pref_location_title" 
    		android:summary="@string/pref_location_summary"/>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/pref_ar_tools_title">
    	<CheckBoxPreference
    		android:key="rotatingCompass"
    		android:title="@string/pref_ar_tools_rotatingCompass_title"
    		android:summaryOn="@string/pref_ar_tools_rotatingCompass_summary_on" 
    		android:summaryOff="@string/pref_ar_tools_rotatingCompass_summary_off" 
    		android:defaultValue="true"/>
    	<CheckBoxPreference
    		android:key="searchSystem"
    		android:title="@string/pref_ar_tools_searchSystem_title"
    		android:summaryOn="@string/pref_ar_tools_searchSystem_summary_on" 
    		android:summaryOff="@string/pref_ar_tools_searchSystem_summary_off" 
    		android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/pref_ar_labels_title">
    	<CheckBoxPreference
    		android:key="centerLabels"
    		android:title="@string/pref_ar_labels_centerLabels_title"
    		android:summaryOn="@string/pref_ar_labels_centerLabels_summary_on" 
    		android:summaryOff="@string/pref_ar_labels_centerLabels_summary_off" 
    		android:defaultValue="false"/>
    	<CheckBoxPreference
    		android:key="imageIcon"
    		android:title="@string/pref_ar_labels_imageIcon_title"
    		android:summaryOn="@string/pref_ar_labels_imageIcon_summary_on" 
    		android:summaryOff="@string/pref_ar_labels_imageIcon_summary_off" 
    		android:defaultValue="true"/>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/pref_ar_names_title">
    	<ListPreference
    		android:key="namesShowing"
    		android:title="@string/pref_ar_names_namesShowing_title" 
    		android:summary="@string/pref_ar_names_namesShowing_summary"
    		android:dialogTitle="@string/pref_ar_names_namesShowing_title"
    		android:entries="@array/draw_name_options"
    		android:entryValues="@array/values_draw_name_options"
    		android:defaultValue="Central_names"/>
	</PreferenceCategory>
	<PreferenceCategory
    	android:title="@string/pref_ar_debug_title">
    	<CheckBoxPreference
    		android:key="showMeasures"
    		android:title="@string/pref_ar_debug_showMeasures_title"
    		android:summaryOn="@string/pref_ar_debug_showMeasures_summary_on" 
    		android:summaryOff="@string/pref_ar_debug_showMeasures_summary_off" 
    		android:defaultValue="false"/>
	</PreferenceCategory>
	
</PreferenceScreen>