<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content_4"
            android:src="@drawable/ch_logo" />

        <TextView
            android:id="@+id/dialog_text_chiringuito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxWidth="250dip"
            android:textColor="#FFF"
            android:text="@string/about_message_chiringuito" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/content_5"
            android:src="@drawable/ar_logo" />

        <TextView
            android:id="@+id/dialog_text_arviewer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxWidth="250dip"
            android:textColor="#FFF"
            android:text="@string/about_message_arviewer" />
    </LinearLayout>

</ScrollView>